CRUD para categorías y tipos de categoría en una sola petición