@@ -1,10 +1,15 @@
 package com.tambo.tambo_delivery_backend.mapper;
 
+import java.util.Collections;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Component;
 
 import com.tambo.tambo_delivery_backend.dto.CategoryDTO;
 import com.tambo.tambo_delivery_backend.dto.CategoryRequestDTO;
+import com.tambo.tambo_delivery_backend.dto.CategoryTypeDTO;
 import com.tambo.tambo_delivery_backend.entities.Category;
+import com.tambo.tambo_delivery_backend.entities.CategoryType;
 
 @Component
 public class CategoryMapper {
@@ -15,18 +20,20 @@ public class CategoryMapper {
         category.setImageUrl(dto.getImageUrl());
         category.setDescription(dto.getDescription());
 
-        // List<CategoryType> types = dto.getCategoryTypes().stream()
-        //         .map(typeDTO -> {
-        //             CategoryType type = new CategoryType();
-        //             type.setName(typeDTO.getName());
-        //             type.setCode(typeDTO.getCode());
-        //             type.setDescription(typeDTO.getDescription());
-        //             type.setCategory(category);
-        //             return type;
-        //         })
-        //         .toList();
+        // Mapear los tipos de categoría si existen
+        if (dto.getCategoryTypes() != null && !dto.getCategoryTypes().isEmpty()) {
+            var types = dto.getCategoryTypes().stream()
+                    .map(typeDTO -> {
+                        CategoryType type = new CategoryType();
+                        type.setName(typeDTO.getName());
+                        type.setDescription(typeDTO.getDescription());
+                        type.setCategory(category); // Establecer la relación bidireccional
+                        return type;
+                    })
+                    .collect(Collectors.toList());
+            category.setCategoryTypes(types);
+        }
 
-        // category.setCategoryTypes(types);
         return category;
     }
 
@@ -36,14 +43,17 @@ public class CategoryMapper {
                 .name(category.getName())
                 .imageUrl(category.getImageUrl())
                 .description(category.getDescription())
-                // .categoryTypes(category.getCategoryTypes().stream()
-                //         .map(type -> CategoryTypeDTO.builder()
-                //                 .id(type.getId())
-                //                 .name(type.getName())
-                //                 .code(type.getCode())
-                //                 .description(type.getDescription())
-                //                 .build())
-                //         .toList())
+                .categoryTypes(
+                    category.getCategoryTypes() != null 
+                        ? category.getCategoryTypes().stream()
+                            .map(type -> CategoryTypeDTO.builder()
+                                .id(type.getId())
+                                .name(type.getName())
+                                .description(type.getDescription())
+                                .build())
+                            .collect(Collectors.toList())
+                        : Collections.emptyList()
+                )
                 .build();
     }
 
